--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <div class="main">
+    <h1>To Do List</h1>
     <a href="/register">Register</a>
     <a href="/login">Loggin</a>
 <%- include("add-data.ejs") %>
@@ -28,7 +29,6 @@
         <%}else {%>
             <a href="/?page=1">visa mindre</a>
         <%}%>
-
-        <!-- hur många sidor finns ni ska visa a taggen med page 1.. -->
+    </div>
 </body>
 </html>
