--- a/pubilc/style/main.css
+++ b/pubilc/style/main.css
@@ -1,3 +1,9 @@
 body{
     background-color: aquamarine;
 }
+.main{
+    margin-left: auto;
+    margin-right: auto;
+    width: 765px;
+    text-align: center;
+}
