--- a/views/add-data.ejs
+++ b/views/add-data.ejs
@@ -1,4 +1,4 @@
-<form action="/" method="post"> <!--likamed app.post("/")-->  
+<form action="/" method="post"> 
 <input type="text" name="name">
 <button type="submit">Add</button>
 </form>
